# rlibs

./: .gitignore  README.md  main.py  pyproject.toml  rclone_filter.txt
rlibs/report_writer/: __init__.py  converters.py  custom_types.py  helpers.py  types.py
rlibs/report_writer/doc_handler/: __init__.py  docx_handler.py  filters.py  jenv.py  jinja_env_functions.py
rlibs/report_writer/html_render/: __init__.py
rlibs/report_writer/pics_analyzer/: __init__.py
rlibs/report_writer/widgets/: __init__.py
tests/: test_rlibs.py
