[tool.poetry]
name = "rlibs"
version = "0.1.0"
description = ""
authors = ["renatormc <renatomartinsrmc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
inquirerpy = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.942"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
